# Parallel_OpenMP

./: .gitignore  CMakeLists.txt  DParallel.cpp  DParallel.h  DSequential.cpp  DSequential.h  Media.cpp  Media.h  PasswordAOS.cpp  PasswordAOS.h  PasswordSOA.cpp  PasswordSOA.h  main.cpp
grafici/: bar_chart_tempi.csv  line_chart_speedup.csv  overhead_chart.csv  plot_scaling.py  riepilogo_medie.csv  risultati_scaling.csv  throughput_chart.csv  variability_chart.csv
